--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL='https://fashionbackend-production.up.railway.app/'
+VITE_API_URL='http://localhost:5000'
 VITE_RAZORPAY_KEY_ID= "rzp_test_bsPpTv7U0niMAp"
