add the functiontionality to add the new prodcuts

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL='http://localhost:5000'
 VITE_RAZORPAY_KEY_ID= "rzp_test_bsPpTv7U0niMAp"
+VITE_FIREBASE_API_KEY="AIzaSyA2PDCc34otFpEdugyU1mWII5Rkqhd7c4A"
